🧪 test: mock이 아닌 실재 객체 사용하기 ($깨닮음)